update more option

--- a/main/index.html
+++ b/main/index.html
@@ -8,9 +8,9 @@
   <script src="src/angular-radar.js"></script>
   <script src="src/app.js"></script>   
 </head>
-<body style="background:#f9f7ed;" ng-controller="radarCtrl">
+<body style="background:#fff;" ng-controller="radarCtrl">
 <div id="chart" style='float:left'></div>
-<radar-chart val="data" width="600" height="600"></radar-chart>
+<radar-chart val="data" size="600" max="20"></radar-chart>
 <script>
 // RadarChart.draw("#chart", d);
 </script>
